plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'

    id 'kotlin-android'
    id 'kotlin-android-extensions'
    id 'kotlin-kapt'
    id 'androidx.navigation.safeargs.kotlin'

    id 'dagger.hilt.android.plugin'
}

android {
//    namespace 'com.alalmiyaalhura.forecastapp'
    compileSdk 33

    defaultConfig {
        applicationId "com.alalmiyaalhura.forecastapp"
        minSdk 23
        targetSdk 33
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {

        def FORECAST_API_KEY = "FORECAST_API_KEY"

        debug {
            buildConfigField "String", FORECAST_API_KEY, "\"19959d991907500fc7368335c0e81721\""
        }

        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    buildFeatures {
        dataBinding true
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    kotlinOptions {
        jvmTarget = '1.8'
    }

    testOptions {
        unitTests.all {
            jvmArgs '--enable-preview'

            useJUnitPlatform()
        }
    }

}

dependencies {

    implementation 'androidx.core:core-ktx:1.7.0'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation "com.google.android.material:material:$materialVersion"

    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.test:core-ktx:1.5.0'
    implementation 'androidx.test.ext:junit-ktx:1.1.5'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    androidTestImplementation 'androidx.test:runner:1.1.1'

//    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.0-M1'

    testImplementation 'app.cash.turbine:turbine:0.12.1'
    androidTestImplementation 'app.cash.turbine:turbine:0.9.0'

    // Coroutine test
    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2"

//    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'


    // Google truth for assertion
    testImplementation "com.google.truth:truth:1.1.2"
    androidTestImplementation "com.google.truth:truth:1.1.2"

    // Fragment
    implementation "androidx.fragment:fragment-ktx:$fragmentVersion"

    // Lifecycle + ViewModel
//    implementation "android.arch.lifecycle:runtime:$lifecycleVersion"
    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
//    implementation "android.arch.lifecycle:common-java8:2.3.0-alpha01"
    implementation 'androidx.lifecycle:lifecycle-common:2.0.0'


    def lifecycle_version = "2.4.0"
    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"

    // Navigation Component
    implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
    implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"

    // Room
    implementation "androidx.room:room-runtime:$roomVersion"
    kapt "androidx.room:room-compiler:$roomVersion"
    implementation "androidx.room:room-ktx:$roomVersion"
    testImplementation "androidx.room:room-testing:$roomVersion"


    // Coroutines
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"

    // Retrofit
    implementation 'com.google.code.gson:gson:2.9.0'
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
//    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.4.1'

    // Picasso
    implementation 'com.squareup.picasso:picasso:2.8'

    // DataStore
    implementation "androidx.datastore:datastore-preferences:$dataStoreVersion"



    // Dagger Hilt
    implementation "com.google.dagger:hilt-android:$hiltVersion"
    kapt "com.google.dagger:hilt-android-compiler:$hiltVersion"
//    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hiltAndroidXVersion"
//    kapt "androidx.hilt:hilt-compiler:$hiltAndroidXVersion"


}

kapt {
    correctErrorTypes true
}

